--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <title>Page not found</title>
     <script>
       // Redirigir siempre a index.html, donde Vue Router manejará las rutas
+      alert(window.location)
       window.location.replace('/frontend-vue-test/index.html')
     </script>
   </head>
